# cloakpipe

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  REVIEW.md  docker-compose.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
crates/cloakleak/: Cargo.toml  README.md
crates/cloakleak-cli/: Cargo.toml
crates/cloakleak-cli/src/: main.rs
crates/cloakleak/.github/workflows/: cloakleak.yml
crates/cloakleak/corpus/prose/: sample.jsonl
crates/cloakleak/corpus/tool_json/: sample.jsonl
crates/cloakleak/src/: cloakpipe_sut.rs  corpus.rs  detect.rs  lib.rs  score.rs  sut.rs
crates/cloakleak/tests/: m6_gate.rs
crates/cloakpipe-anchor/: Cargo.toml
crates/cloakpipe-anchor/src/: batch.rs  lib.rs  merkle.rs  receipt.rs
crates/cloakpipe-anchor/src/anchor/: log.rs  mod.rs  tsa.rs
crates/cloakpipe-audit/: Cargo.toml
crates/cloakpipe-audit/src/: lib.rs  sqlite.rs
crates/cloakpipe-cli/: Cargo.toml
crates/cloakpipe-cli/src/: commands.rs  main.rs
crates/cloakpipe-cli/tests/: mcp_proxy.rs
crates/cloakpipe-core/examples/: nemotron_smoke.rs  pii_benchmark.rs
crates/cloakpipe-core/src/: config.rs  format_preserving.rs  rehydrator.rs  session.rs  vault.rs  vault_sqlite.rs
crates/cloakpipe-core/src/detector/: distilbert_pii.rs  gliner.rs  mod.rs  nemotron_pii.rs  ner.rs
crates/cloakpipe-core/tests/: integration.rs
crates/cloakpipe-ledger/: Cargo.toml
crates/cloakpipe-ledger/src/: canonical.rs  chain.rs  export.rs  lib.rs  record.rs  sign.rs  store.rs
crates/cloakpipe-ledger/tests/: m1_gate.rs  no_pii_invariant.rs
crates/cloakpipe-mcp/: Cargo.toml
crates/cloakpipe-mcp/src/: lib.rs  proxy.rs
crates/cloakpipe-proxy/: Cargo.toml
crates/cloakpipe-proxy/src/: handlers.rs  state.rs  streaming.rs  tree_handlers.rs
crates/cloakpipe-tree/: Cargo.toml
crates/cloakpipe-tree/src/: indexer.rs  parser.rs
crates/cloakpipe-vector/src/: adcpe.rs
crates/cloakpipe-verify/: Cargo.toml
crates/cloakpipe-verify/src/: anchor.rs  bundle.rs  lib.rs  main.rs  verify.rs
crates/cloakpipe-verify/tests/: m2_e2e.rs  m2_gate.rs  m3_gate.rs
crates/cloakpipe-verify/tests/fixtures/: README.md  sample.bundle.json
docker/: cloakpipe.docker.toml
docs/: PLAN.md
integrations/python/cloakpipe/: client.py
policies/: dpdp.toml  gdpr.toml  hipaa.toml  minimal.toml  pci-dss.toml
