[package]
name = "cloakpipe-anchor"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "External anchoring for CloakPipe evidence bundles — Merkle batching, RFC-3161 TSA, transparency-log submission"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
uuid = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = "3"