[package]
name = "cloakpipe-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Verifiable evidence ledger: hash-chained, signed, no-PII records for CloakPipe"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = { workspace = true }
zeroize = { workspace = true }
tempfile = "3"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "ledger-export-fixture"
path = "bin/export-fixture.rs"