[package]
name = "cloakpipe-verify"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
description = "Standalone verifier for CloakPipe evidence bundles — no internal CloakPipe deps"

[[bin]]
name = "cloakpipe-verify"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
# Test-only: the gate tests (M3, M4) construct anchored bundles from
# scratch using the producer crates, then run the *standalone*
# verifier against them. The verifier's lib does NOT depend on these.
cloakpipe-anchor = { path = "../cloakpipe-anchor" }
cloakpipe-ledger = { path = "../cloakpipe-ledger" }
uuid = { workspace = true }